--- a/client/src/modules/doctorPortal/pages/doctor-portal/doctor-portal.module.css
+++ b/client/src/modules/doctorPortal/pages/doctor-portal/doctor-portal.module.css
@@ -2,6 +2,7 @@
   width: 80%;
   height: 100vh; /* Make the container take the full height of the viewport */
   margin: auto; /* Push the container to the right */
+  overflow: hidden;
 }
 .flexContainer {
   display: flex;
