--- a/client/src/modules/auth/pages/sign-in_module.css
+++ b/client/src/modules/auth/pages/sign-in_module.css
@@ -1,7 +1,7 @@
 /* Container */
 .sign-in-container {
   max-width: 500px;
-  margin-left: 500px;
+  margin: auto;
   padding: 20px;
   border: 2px solid #0e0d0d;
   border-radius: 5px;
@@ -12,12 +12,12 @@
   display: flex;
   margin-top: 150px;
 }
-.background{
-  width:100%;
+.background {
+  width: 100%;
   height: 100vh;
   overflow: hidden;
   /* background-image: url("../../patientPortal/pages/istockphoto-911633218-612x612.jpg"); */
-  background: linear-gradient(285.17deg, #a8bebe 10.66%, #dcdcdc 102.7%)
+  background: linear-gradient(285.17deg, #a8bebe 10.66%, #dcdcdc 102.7%);
 }
 /* Form Title */
 .sign-in-container h2 {
@@ -38,7 +38,6 @@
   display: block;
   font-weight: 400;
   /* font-weight: bold; */
-
 }
 
 /* Input Field */
